--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/module-type-aliases": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^2.4.1",
@@ -28,11 +29,9 @@
     "remark-math": "^3.0.1"
   },
   "overrides": {
+    "http-proxy-middleware": "^2.0.7",
     "path-to-regexp": "^3.3.0",
     "trim": "0.0.3"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1"
   },
   "browserslist": {
     "production": [
